# monorepo-template

./: .prettierignore  README.ko.md  README.md  eslint.config.js  package.json
.github/workflows/: ci.yml
apps/be/: .env.example  .gitignore  package.json
apps/be/prisma/: schema.prisma
apps/be/scripts/: change-prisma.ts  generate-spec.ts  postprocess-openapi.ts
apps/be/src/: app.ts  index.ts  prisma.ts  routes.ts  types.ts
apps/be/src/config/: env.ts  process.ts
apps/be/src/routes/: _loader.ts  (+2 more)
apps/be/src/routes-admin/: _middleware.ts  health.ts  index.ts
apps/fe/: index.html  package.json  tsconfig.json  vite.config.ts
apps/fe/src/: App.tsx  main.tsx
cli/: .gitignore  Cargo.toml
cli/src/: args.rs  error.rs  main.rs  report.rs
cli/src/checks/: build.rs  ci.rs  env.rs  mod.rs  nginx.rs  pm2.rs  runtime.rs
cli/src/util/: command.rs  env.rs  mod.rs  repo.rs  walk.rs
docs/: architecture.ko.md  architecture.md  backend-routing.ko.md  backend-routing.md  codegen.ko.md  codegen.md  contributing.ko.md  contributing.md  gui-editor-guide.ko.md  gui-editor-guide.md
gui-edit/: package.json  tailwind.config.js
gui-edit/src/: App.css  App.tsx
gui-edit/src-tauri/: Cargo.toml  tauri.conf.json
gui-edit/src-tauri/src/: lib.rs  main.rs
gui-edit/src-tauri/src/commands/: fs.rs
gui-edit/src-tauri/src/parser/: mod.rs  route_analyzer.rs
gui-edit/src/hooks/: useKeyboardShortcuts.ts
gui-edit/src/lib/: tauri.ts
gui-edit/src/stores/: component-editor.ts  editor.ts  explorer.ts  selectors.ts  ui.ts  workspace.ts
gui-edit/src/styles/: globals.css
(+38 files in other folders)
